--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.ts",
   "dependencies": {
+    "request": "^2.88.0",
     "ws": "^7.1.2"
   },
   "devDependencies": {
