--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "app.ts",
   "dependencies": {
+    "baidu-aip-sdk": "^2.4.4",
+    "cheerio": "^1.0.0-rc.3",
+    "images": "^3.0.2",
     "request": "^2.88.0",
+    "tesseract.js": "^1.0.19",
     "ws": "^7.1.2"
   },
   "devDependencies": {
