--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "ts-node app.ts",
+    "server": "node server",
     "tsc": "tsc",
     "test": "ts-node test/index.ts"
   },
