--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.ts",
   "dependencies": {
+    "node-fetch": "^2.6.0",
     "request": "^2.88.0",
     "test": "^0.6.0",
     "ws": "^7.1.2"
